# neighbourhood-warmth

./: .gitignore  Dockerfile  README.md  _config.yml  _config_dev.yml  docker-compose.yml  index.html  logged_in.html  manage.py  neighbourhood.html  pyproject.toml  setup.html
.github/workflows/: build_dev_image.yml  mirror.yml
_includes/: footer.html  header.html  logo.html  nav-item.html
_includes/icons/: lock-filled.html  timer.html
_layouts/: default.html
_sass/: _site-footer.scss  _site-header.scss  _utilities.scss  _variables.scss  main.scss
conf/: env-example
neighbourhood/: admin.py  apps.py  example_data.py  forms.py  mapit.py  mixins.py  models.py  tokens.py  utils.py  views.py
neighbourhood/fixtures/: groups.json  marple.geojson  memberships.json  teams.json
neighbourhood/migrations/: 0001_initial.py  0002_add_team_slug.py  0003_add_full_team_properties.py  0004_user_full_name.py  0005_make_team_slug_unique.py  0006_add_team_status.py  0007_add_team_members.py  0008_tokens.py  0009_update_user_options.py  0010_add_user_email_confirmed.py  0011_add_team_confirmed.py  0012_remove_team_membership.py  0013_add_membership.py  0014_add_team_admin_flag.py  0015_alter_token_domain.py  0016_membership_rejected.py  0017_add_areas.py  0018_add_last_updated_and_created.py  0019_challenges.py  0020_team_challenge.py  0021_challenge_rich_description.py  0022_public_challenge_fields.py  0023_alter_challenge_description_and_more.py  0024_team_boundary.py  (+1 more)
neighbourhood_warmth/: asgi.py  settings.py  urls.py  wsgi.py
script/: bootstrap  server  update
(+81 files in other folders)
