[tool.poetry]
name = "neighbourhood-warmth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.1"
psycopg2 = "^2.9.5"
django-environ = "^0.10.0"
django-bootstrap5 = "^22.2"
django-libsass = "^0.9"
requests = "^2.30.0"
requests-cache = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
django-debug-toolbar = "^3.8.1"
django-sslserver = "^0.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
